--- a/article.html
+++ b/article.html
@@ -33,7 +33,7 @@
 
 <body>
     <!-- Encabezado -->
-    <header class="fixed-top color-theme">
+    <header class="fixed-top s-color-theme">
         <!-- Date & Time section -->
         <div class="info col-12 p-3 bg-date-time d-flex">
             <div class="mr-auto txt-banner">
@@ -54,7 +54,7 @@
         <!-- ./Logo -->
 
         <!-- Menú -->
-        <nav class="navbar navbar-expand-lg navbar-dark color-theme p-0 shadow-none">
+        <nav class="navbar navbar-expand-lg navbar-dark s-color-theme p-0 shadow-none">
             <!-- Logo -->
             <div class="logo bg-logo px-5 py-3 text-center">
                 <a class="navbar-brand" href="index.html">
@@ -119,14 +119,14 @@
     <!-- Encabezado -->
 
     <!-- Contenido -->
-    <main class="main">
+    <main class="o-main">
         <section class="article">
 
             <!-- Section Title -->
-            <div class="view">
+            <div class="o-section-title view">
                 <!-- Button trigger modal -->
                 <div type="button" data-toggle="modal" data-target="#exampleModal">
-                    <div class="section-img d-block w-100">
+                    <div class="o-section-title__section-img d-block w-100">
                         <img loading="lazy" src="dist/img/imagenes/c4.jpg" class="img-fluid w-100 object-fit-cover" alt="laptop y café">
                     </div>
                 </div>
@@ -135,25 +135,25 @@
                         <div class="white-text">
                             <h1 class="h1-responsive section-title__text-title titulo-texto text-uppercase font-weight-bold">
                                 Articulo</h1>
-                            <hr class="hr-section-title">
+                            <hr class="o-hr-section-title">
                             <div class="section-title__text-subtitle d-flex w-100 mb-3 mt-0 flex-column">
                                 <!-- Author -->
                                 <div class="author text-white my-2">
-                                    <i class="far fa-user text-theme mx-2"></i>
+                                    <i class="far fa-user s-text-theme mx-2"></i>
                                     <span>dsperez</span>
                                 </div>
                                 <!-- ./Author -->
 
                                 <!-- Date -->
                                 <div class="date text-white my-2">
-                                    <i class="fas fa-calendar-alt text-theme mx-2"></i>
+                                    <i class="fas fa-calendar-alt s-text-theme mx-2"></i>
                                     <span>11/04/2020</span>
                                 </div>
                                 <!-- ./Date -->
 
                                 <!-- Category -->
                                 <div class="category text-white my-2">
-                                    <i class="fas fa-check text-theme mx-2"></i>
+                                    <i class="fas fa-check s-text-theme mx-2"></i>
                                     <span>Tecnología</span>
                                 </div>
                                 <!-- ./Category -->
@@ -167,15 +167,15 @@
             <!-- ./Section Title -->
 
             <!-- Section Content -->
-            <div class="section-content bg-light-blue-1">
-                <div class="content-wrapper max-width">
+            <div class="o-section-content s-color-theme-1">
+                <div class="o-section-content-wrapper max-width">
                     <div class="container-fluid">
                         <div class="row">
 
                             <!-- Imagen trigger modal -->
                             <div class="col-md-5">
                                 <div data-toggle="modal" data-target="#exampleModal">
-                                    <img loading="lazy" src="dist/img/imagenes/c4.jpg" class="section-content__img img-fluid w-100 object-fit-cover" alt="laptop y café">
+                                    <img loading="lazy" src="dist/img/imagenes/c4.jpg" class="o-section-content__img img-fluid w-100 object-fit-cover" alt="laptop y café">
                                 </div>                          
                             </div>
                             <!-- ./Imagen trigger modal -->
@@ -204,14 +204,14 @@
                         </div>
                     </div>
                     <div class="w-100 mx-auto text-center mt-4">
-                        <a href="blog.html" class="btn btn-theme text-white">Volver</a>
+                        <a href="blog.html" class="btn o-btn-theme text-white">Volver</a>
                     </div>
                 </div>
             </div>
             <!-- ./Section Content -->
 
             <!-- Paginación --> 
-            <div class="bg-light-blue-5">
+            <div class="s-color-theme-5">
                 <nav aria-label="Page navigation" class="d-flex align-items-center justify-content-center py-4">
                     <ul class="pagination pg-blue">
                         <li class="page-item">
@@ -239,7 +239,7 @@
                 aria-hidden="true">
                 <div class="modal-dialog modal-dialog-centered" role="document">
                     <div class="modal-content">
-                        <div class="modal-header color-theme">
+                        <div class="modal-header s-color-theme">
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                 <i class="fas fa-window-close white-text"></i>
                             </button>
@@ -261,7 +261,7 @@
 
 
     <!-- Footer -->
-    <footer class="page-footer font-small pt-4 color-theme">
+    <footer class="page-footer font-small pt-4 s-color-theme">
 
         <!-- Footer Menú -->
         <div class="container-fluid text-center text-md-left">
