--- a/blog.html
+++ b/blog.html
@@ -33,7 +33,7 @@
 
 <body>
     <!-- Encabezado -->
-    <header class="fixed-top color-theme">
+    <header class="fixed-top s-color-theme">
         <!-- Date & Time section -->
         <div class="info col-12 p-3 bg-date-time d-flex">
             <div class="mr-auto txt-banner">
@@ -54,7 +54,7 @@
         <!-- ./Logo -->
 
         <!-- Menú -->
-        <nav class="navbar navbar-expand-lg navbar-dark color-theme p-0 shadow-none">
+        <nav class="navbar navbar-expand-lg navbar-dark s-color-theme p-0 shadow-none">
             <!-- Logo -->
             <div class="logo bg-logo px-5 py-3 text-center">
                 <a class="navbar-brand" href="index.html">
@@ -119,25 +119,25 @@
     <!-- Encabezado -->
 
     <!-- Contenido -->
-    <main class="main">
-        <section class="blog">
+    <main class="o-main">
+        <section class="o-section blog">
             <!-- Section Title -->
-            <div class="view">
-                <div class="section-img d-block w-100">
+            <div class="o-section-title view">
+                <div class="o-section-title__section-img d-block w-100">
                     <img src="dist/img/imagenes/blog.jpeg" class="img-fluid w-100" alt="" srcset="">
                 </div>
                 <div class="mask rgba-stylish-strong main-view d-flex align-items-center justify-content-center">
                     <div class="white-text text-justify">
                         <h1 class="h1-responsive text-center">Blog</h1>
-                        <hr class="hr-section-title">
+                        <hr class="o-hr-section-title">
                     </div>
                 </div>
             </div>
             <!-- ./Section Title -->
 
             <!-- Section Content -->
-            <div class="section-content bg-light-blue-1">
-                <div class="content-wrapper max-width">
+            <div class="o-section-content s-color-theme-1">
+                <div class="o-section-content-wrapper max-width">
                     <div class="container-fluid">
 
                         <!-- Artículos -->
@@ -148,24 +148,24 @@
                                     <img class="card-img-top mb-0" src="dist/img/imagenes/c4.jpg" alt="">
                                     <div class="card-body">
                                         <div class="text-title">
-                                            <h2 class="h2-responsive card-title text-theme font-weight-bold">Titulo</h2>
+                                            <h2 class="h2-responsive card-title s-text-theme font-weight-bold">Titulo</h2>
                                             <div class="blog-subtitle w-100 mb-3 mt-0">
                                                 <!-- Author -->
-                                                <div class="author m-2 text-theme">
+                                                <div class="author m-2 s-text-theme">
                                                     <i class="far fa-user"></i>
                                                     <span>dsperez</span>
                                                 </div>
                                                 <!-- ./Author -->
 
                                                 <!-- Date -->
-                                                <div class="date m-2 text-theme">
+                                                <div class="date m-2 s-text-theme">
                                                     <i class="fas fa-calendar-alt"></i>
                                                     <span>11/04/2020</span>
                                                 </div>
                                                 <!-- ./Date -->
 
                                                 <!-- Category -->
-                                                <div class="category text-theme m-2">
+                                                <div class="category s-text-theme m-2">
                                                     <i class="fas fa-check"></i>
                                                     <span>Tecnología</span>
                                                 </div>
@@ -181,7 +181,7 @@
                                         <hr>
                                         <!-- Boton -->
                                         <div class="w-100 text-center">
-                                            <a href="article.html" class="btn btn-theme text-white">Leer</a>
+                                            <a href="article.html" class="btn o-btn-theme text-white">Leer</a>
                                         </div>
                                         <!-- Boton -->
 
@@ -200,7 +200,7 @@
         </section>
 
         <!-- Paginación -->
-        <div class="bg-light-blue-5 py-4">
+        <div class="s-color-theme-5 py-4">
             <nav aria-label="Page navigation" class="d-flex align-items-center justify-content-center mb-0">
                 <ul class="pagination pg-blue">
                     <li class="page-item">
@@ -226,7 +226,7 @@
 
 
     <!-- Footer -->
-    <footer class="page-footer font-small pt-4 color-theme">
+    <footer class="page-footer font-small pt-4 s-color-theme">
 
         <!-- Footer Menú -->
         <div class="container-fluid text-center text-md-left">
