--- a/contacto.html
+++ b/contacto.html
@@ -34,7 +34,7 @@
 
 <body>
     <!-- Encabezado -->
-    <header class="fixed-top color-theme">
+    <header class="fixed-top s-color-theme">
         <!-- Date & Time section -->
         <div class="info col-12 p-3 bg-date-time d-flex">
             <div class="mr-auto txt-banner">
@@ -55,7 +55,7 @@
         <!-- ./Logo -->
 
         <!-- Menú -->
-        <nav class="navbar navbar-expand-lg navbar-dark color-theme p-0 shadow-none">
+        <nav class="navbar navbar-expand-lg navbar-dark s-color-theme p-0 shadow-none">
             <!-- Logo -->
             <div class="logo bg-logo px-5 py-3 text-center">
                 <a class="navbar-brand" href="index.html">
@@ -120,41 +120,41 @@
     <!-- Encabezado -->
 
     <!-- Contenido -->
-    <main class="main">
-        <section class="contact">
+    <main class="o-main">
+        <section class="o-section contact">
 
             <!-- Section Title -->
-            <div class="view">
-                <div class="section-img d-block w-100">
+            <div class="o-section-title view">
+                <div class="o-section-title__section-img d-block w-100">
                     <img src="dist/img/imagenes/contacto.jpeg" class="img-fluid w-100" alt="personas saludando">
                 </div>
                 <div class="mask rgba-stylish-strong main-view d-flex align-items-center justify-content-center">
                     <div class="white-text text-justify">
                         <h1 class="h1-responsive text-center">Contacto</h1>
-                        <hr class="hr-section-title">
+                        <hr class="o-hr-section-title">
                     </div>
                 </div>
             </div>
             <!-- ./Section Title -->
 
             <!-- Contenido -->
-            <div class="section-content bg-light-blue-1">
-                <div class="section-wrapper">
-                    <div class="content-wrapper max-width">
+            <div class="o-section-content s-color-theme-1">
+                <div class="o-section-content_section-wrapper">
+                    <div class="o-section-content-wrapper max-width">
                         <!-- Section description -->
-                        <p class="section-content__pregunta-contacto w-responsive mx-auto text-theme">¿Tiene usted
+                        <p class="o-section-content-wrapper__pregunta-contacto w-responsive mx-auto s-text-theme">¿Tiene usted
                             alguna pregunta?
                             Por favor no dude en contactar con nosotros directamente. Nuestro equipo volverá a usted
                             dentro de cuestión de horas para ayudarlo.</p>
                         <!-- ./Section description -->
 
                         <!-- Formulario -->
-                        <div class="row pt-5">
+                        <div class="o-section-content-wrapper__formulario row pt-5">
 
                             <!-- Envio de correo -->
-                            <div class="col-md-9 mb-md-0 mb-5 bg-light-blue-4 p-3 p-md-5">
+                            <div class="col-md-9 mb-md-0 mb-5 s-color-theme-4 p-3 p-md-5">
 
-                                <form>
+                                <form class="o-section-content-wrapper__formulario-envio-correo">
 
                                     <!-- Nombre & Correo Electronico -->
                                     <div class="row">
@@ -211,14 +211,14 @@
                                 </form>
 
                                 <div class="text-center mt-4">
-                                    <a class="btn btn-primary btn-lg">Send</a>
+                                    <a class="btn btn-lg o-btn-theme">Send</a>
                                 </div>
 
                             </div>
                             <!-- ./Envio de correo -->
 
                             <!-- Datos de contacto -->
-                            <div class="col-md-3 py-5 text-center color-theme">
+                            <div class="col-md-3 py-5 text-center s-color-theme">
                                 <ul class="list-unstyled">
                                     <li>
                                         <i class="fas fa-map-marker-alt fa-2x white-text"></i>
@@ -240,7 +240,7 @@
                         <!-- ./Formulario -->
 
                         <!-- Google map -->
-                        <div id="map-container-google-1" class="section-content__map-container my-5">
+                        <div id="map-container-google-1" class="o-section-content-wrapper__map-container-contacto my-5">
                             <iframe
                                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12610.52510214519!2d-122.4059758598319!3d37.798680131327636!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8085806800ecb699%3A0xf91d657fb37e68fd!2sSan%20Francisco%2C%20California%2094126%2C%20EE.%20UU.!5e0!3m2!1ses-419!2smx!4v1585591882087!5m2!1ses-419!2smx"
                                 frameborder="0" allowfullscreen class="g-maps">
@@ -257,7 +257,7 @@
     <!-- Contenido -->
 
     <!-- Footer -->
-    <footer class="page-footer font-small pt-4 color-theme">
+    <footer class="page-footer font-small pt-4 s-color-theme">
 
         <!-- Footer Menú -->
         <div class="container-fluid text-center text-md-left">
