--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -35,7 +35,7 @@
 <body>
 
     <!-- Encabezado -->
-    <header class="fixed-top color-theme">
+    <header class="fixed-top s-color-theme">
         <!-- Date & Time section -->
         <div class="info col-12 p-3 bg-date-time d-flex">
             <div class="mr-auto txt-banner">
@@ -56,7 +56,7 @@
         <!-- ./Logo -->
 
         <!-- Menú -->
-        <nav class="navbar navbar-expand-lg navbar-dark color-theme p-0 shadow-none">
+        <nav class="navbar navbar-expand-lg navbar-dark s-color-theme p-0 shadow-none">
             <!-- Logo -->
             <div class="logo bg-logo px-5 py-3 text-center">
                 <a class="navbar-brand" href="index.html">
@@ -121,31 +121,31 @@
     <!-- Encabezado -->
 
     <!-- Contenido -->
-    <main class="main">
+    <main class="o-main">
         <!-- Sobre Nosotros -->
         <section class="about">
 
             <!-- Titulo -->
-            <div class="view">
-                <div class="section-img d-block w-100">
-                    <img src="dist/img/imagenes/edificio.jpeg" class="img-fluid w-100 img-title" alt="" srcset="">
+            <div class="o-section-title view">
+                <div class="o-section-title__section-img d-block w-100">
+                    <img src="dist/img/imagenes/edificio.jpeg" class="img-fluid w-100 o-section-title__section-img_imagen" alt="" srcset="">
                 </div>
                 <div class="mask rgba-stylish-strong section-title d-flex align-items-center justify-content-center">
                     <div class="white-text text-justify">
                         <h1 class="h1-responsive text-center">Diseño y Desarrollo Web</h1>
-                        <hr class="hr-section-title">
+                        <hr class="o-hr-section-title">
                     </div>
                 </div>
             </div>
             <!-- ./Titulo -->
 
             <!-- Contenido -->
-            <div class="section-content content-bg lighten-5">
+            <div class="o-section-content content-bg lighten-5">
 
                 <!-- Quienes Somos -->
-                <section class="bg-light-blue-1">
-                    <div class="content-wrapper max-width">
-                        <h2 class="h2-responsive text-theme text-center content-h2 pb-5">Quienes Somos</h2>
+                <section class="s-color-theme-1">
+                    <div class="o-section-content-wrapper max-width">
+                        <h2 class="h2-responsive s-text-theme text-center o-section-content__h2 pb-5">Quienes Somos</h2>
                         <p>Somos un grupo de personas con grandes deseos de realizar
                             páginas amigables, personalizadas y únicas para los usuarios con manejo de proyectos de
                             todo tipo. Así como generar oportunidades para los clientes gracias al posicionamiento
@@ -155,9 +155,9 @@
                 <!-- ./Quienes Somos -->
 
                 <!-- Misión -->
-                <section class="bg-light-blue-2">
-                    <div class="content-wrapper max-width">
-                        <h2 class="h2-responsive text-theme text-center content-h2">Misión</h2>
+                <section class="s-color-theme-2">
+                    <div class="o-section-content-wrapper max-width">
+                        <h2 class="h2-responsive s-text-theme text-center o-section-content__h2">Misión</h2>
                         <p>Somos un grupo de personas con grandes deseos de realizar
                             páginas amigables, personalizadas y únicas para los usuarios con manejo de proyectos de
                             todo tipo. Así como generar oportunidades para los clientes gracias al posicionamiento
@@ -167,9 +167,9 @@
                 <!-- ./Misión -->
 
                 <!-- Visión -->
-                <section class="bg-light-blue-3">
-                    <div class="content-wrapper max-width">
-                        <h2 class="h2-responsive text-theme text-center content-h2 pb-5">Visión</h2>
+                <section class="s-color-theme-3">
+                    <div class="o-section-content-wrapper max-width">
+                        <h2 class="h2-responsive s-text-theme text-center o-section-content__h2 pb-5">Visión</h2>
                         <p>Somos un grupo de personas con grandes deseos de realizar
                             páginas amigables, personalizadas y únicas para los usuarios con manejo de proyectos de
                             todo tipo. Así como generar oportunidades para los clientes gracias al posicionamiento
@@ -179,10 +179,10 @@
                 <!-- ./Misión -->
 
                 <!-- Nuestro Equipo -->
-                <section class="team-section text-center py-5 bg-light-blue-4">
-                    <div class="content-wrapper max-width">
+                <section class="team-section text-center py-5 s-color-theme-4">
+                    <div class="o-section-content-wrapper max-width">
                         <!-- Section heading -->
-                        <h2 class="h2-responsive font-weight-bold my-5 text-theme ">Nuestro Equipo</h2>
+                        <h2 class="h2-responsive font-weight-bold my-5 s-text-theme ">Nuestro Equipo</h2>
                         <!-- Section description -->
                         <p class="w-responsive mx-auto mb-5">Lorem ipsum dolor sit amet, consectetur
                             adipisicing elit.
@@ -199,23 +199,23 @@
                                     <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(32).jpg"
                                         class="rounded-circle z-depth-3" alt="Sample avatar" width="140">
                                 </div>
-                                <h4 class="font-weight-bold mt-4 mb-3 text-theme">Tom Adams</h4>
-                                <h5 class="text-uppercase text-theme text-center mb-4">Desarrollador Web</h5>
+                                <h4 class="font-weight-bold mt-4 mb-3 s-text-theme">Tom Adams</h4>
+                                <h5 class="text-uppercase s-text-theme text-center mb-4">Desarrollador Web</h5>
                                 <p>Perspiciatis repellendus ad odit consequuntur, eveniet earum nisi
                                     qui consectetur
                                     totam officia voluptates perferendis voluptatibus aut.</p>
                                 <ul class="list-unstyled mb-0">
                                     <!-- Facebook -->
                                     <a class="p-2 fa-lg fb-ic">
-                                        <i class="fab fa-facebook-f text-theme fa-2x"> </i>
+                                        <i class="fab fa-facebook-f s-text-theme fa-2x"> </i>
                                     </a>
                                     <!-- Github -->
                                     <a class="p-2 fa-lg ins-ic">
-                                        <i class="fab fa-github text-theme fa-2x"> </i>
+                                        <i class="fab fa-github s-text-theme fa-2x"> </i>
                                     </a>
                                     <!-- Instagram -->
                                     <a class="p-2 fa-lg ins-ic">
-                                        <i class="fab fa-instagram text-theme fa-2x"></i>
+                                        <i class="fab fa-instagram s-text-theme fa-2x"></i>
                                     </a>
                                 </ul>
                             </div>
@@ -227,8 +227,8 @@
                                     <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(30).jpg"
                                         class="rounded-circle z-depth-3" alt="Sample avatar" width="140">
                                 </div>
-                                <h4 class="font-weight-bold mt-4 mb-3 text-theme">Angelina Jolie</h4>
-                                <h5 class="text-uppercase text-center font-weight-bold text-theme mb-4">Diseñador Web
+                                <h4 class="font-weight-bold mt-4 mb-3 s-text-theme">Angelina Jolie</h4>
+                                <h5 class="text-uppercase text-center font-weight-bold s-text-theme mb-4">Diseñador Web
                                 </h5>
                                 <p>Perspiciatis repellendus ad odit consequuntur, eveniet earum nisi
                                     qui consectetur
@@ -236,15 +236,15 @@
                                 <ul class="list-unstyled mb-0">
                                     <!-- Facebook -->
                                     <a class="p-2 fa-lg fb-ic">
-                                        <i class="fab fa-facebook-f text-theme fa-2x"> </i>
+                                        <i class="fab fa-facebook-f s-text-theme fa-2x"> </i>
                                     </a>
                                     <!-- Github -->
                                     <a class="p-2 fa-lg ins-ic">
-                                        <i class="fab fa-github text-theme fa-2x"> </i>
+                                        <i class="fab fa-github s-text-theme fa-2x"> </i>
                                     </a>
                                     <!-- Instagram -->
                                     <a class="p-2 fa-lg ins-ic">
-                                        <i class="fab fa-instagram text-theme fa-2x"></i>
+                                        <i class="fab fa-instagram s-text-theme fa-2x"></i>
                                     </a>
                                 </ul>
                             </div>
@@ -263,9 +263,9 @@
         <!-- ./Sobre Nosotros -->
 
         <!-- Nuestros Clientes -->
-        <div class="clientes bg-light-blue-5 mx-auto">
-            <div class="content-wrapper max-width">
-                <h2 class="h2-responsive text-theme text-center content-h2 pb-5">Nuestros Clientes</h2>
+        <div class="clientes s-color-theme-5 mx-auto">
+            <div class="o-section-content-wrapper max-width">
+                <h2 class="h2-responsive s-text-theme text-center o-section-content__h2 pb-5">Nuestros Clientes</h2>
 
                 <!-- Carousel Clientes -->
                 <div id="carousel-clientes" class="carousel slide" data-ride="carousel">
@@ -298,7 +298,7 @@
     <!-- Contenido -->
 
     <!-- Footer -->
-    <footer class="page-footer font-small pt-4 color-theme">
+    <footer class="page-footer font-small pt-4 s-color-theme">
 
         <!-- Footer Menú -->
         <div class="container-fluid text-center text-md-left">
