--- a/servicios.html
+++ b/servicios.html
@@ -32,7 +32,7 @@
 
 <body>
     <!-- Encabezado -->
-    <header class="fixed-top color-theme">
+    <header class="fixed-top s-color-theme">
         <!-- Date & Time section -->
         <div class="info col-12 p-3 bg-date-time d-flex">
             <div class="mr-auto txt-banner">
@@ -52,7 +52,7 @@
 
         
         <!-- Menu -->
-        <nav class="navbar navbar-expand-lg navbar-dark color-theme p-0 shadow-none">
+        <nav class="navbar navbar-expand-lg navbar-dark s-color-theme p-0 shadow-none">
             <!-- Logo -->
             <div class="logo bg-logo px-5 py-3 text-center">
                 <a class="navbar-brand" href="index.html">
@@ -118,30 +118,30 @@
     <!-- Encabezado -->
 
     <!-- Contenido -->
-    <main class="main">
+    <main class="o-main">
         <section class="services">
 
             <!-- Section Title -->
-            <div class="view">
-                <div class="section-img d-block w-100">
+            <div class="o-section-title view">
+                <div class="o-section-title__section-img d-block w-100">
                     <img src="dist/img/imagenes/welcome.jpeg" class="img-fluid w-100" alt="" srcset="">
                 </div>
                 <div class="mask rgba-stylish-strong main-view d-flex align-items-center justify-content-center">
                     <div class="white-text text-justify">
                         <h1 class="h1-responsive text-center">Servicios</h1>
-                        <hr class="hr-section-title">
+                        <hr class="o-hr-section-title">
                     </div>
                 </div>
             </div>
             <!-- ./Section Title -->
 
             <!-- Content -->
-            <div class="section-content">
+            <div class="o-section-content">
 
                 <!-- Necesidades -->
-                <div id="necesidades"class="bg-light-blue-1">
-                    <div class="content-wrapper max-width">
-                        <h2 id="nuestros-servicios" class="h2-responsive text-theme text-center content-h2 pb-5">
+                <div id="necesidades"class="s-color-theme-1">
+                    <div class="o-section-content-wrapper max-width">
+                        <h2 id="nuestros-servicios" class="h2-responsive s-text-theme text-center o-section-content__h2 pb-5">
                             Nuestros Servicios</h2>
                         <p class="">En la actualidad las empresas requieren enfocarse en dar a
                             conocer los productos o servicios que estas ofrecen por medio de un medio digital
@@ -162,7 +162,7 @@
                                 <div class="col-md-6 p-0 mt-5">
                                     <div>
                                         <div class="card-img-top d-flex align-items-center justify-content-center pb-4">
-                                            <i class="fas fa-icons fa-4x text-theme"></i>
+                                            <i class="fas fa-icons fa-4x s-text-theme"></i>
                                         </div>
                                         <div class="card-body p-0">
                                             <h4 class="card-title">Diseño Web</h4>
@@ -186,7 +186,7 @@
                                 <div class="col-md-6 p-0 mt-5">
                                     <div>
                                         <div class="card-img-top d-flex align-items-center justify-content-center pb-4">
-                                            <i class="fas fa-terminal fa-4x text-theme"></i>
+                                            <i class="fas fa-terminal fa-4x s-text-theme"></i>
                                         </div>
                                         <div class="card-body p-0">
                                             <h4 class="card-title">Desarrollo Web</h4>
@@ -210,9 +210,9 @@
 
 
                 <!-- ¿Que ofrecemos? -->
-                <div id="que-ofrecemos" class="bg-light-blue-2">
-                    <div class="content-wrapper max-width">
-                        <h2 class="h2-responsive text-theme text-center content-h2 pb-5">¿Qué ofrecemos? </h2>
+                <div id="que-ofrecemos" class="s-color-theme-2">
+                    <div class="o-section-content-wrapper max-width">
+                        <h2 class="h2-responsive s-text-theme text-center o-section-content__h2 pb-5">¿Qué ofrecemos? </h2>
 
                         <!-- Páginas Responsivas -->
                         <article class="responsivo my-5 shadow-lg">
@@ -222,7 +222,7 @@
                                         <img src="dist/img/imagenes/responsivo.jpeg" alt="">
                                     </div>
                                     <div class="col-md-7 p-5 white ">
-                                        <h2 class="h2-responsive text-theme">Páginas Responsivas</h2>
+                                        <h2 class="h2-responsive s-text-theme">Páginas Responsivas</h2>
                                         <hr class="hr-card">
                                         <p class="mt-5"> Actualmente existe la necesidad de que la página web sea vista
                                             de forma correcta para cada plataforma como teléfonos inteligentes, tabletas
@@ -244,7 +244,7 @@
                                         <img src="dist/img/imagenes/c11.jpeg" alt="">
                                     </div>
                                     <div class="col-md-7 p-5 white ">
-                                        <h2 class="h2-responsive text-theme">Optimización de SEO</h2>
+                                        <h2 class="h2-responsive s-text-theme">Optimización de SEO</h2>
                                         <hr class="hr-card">
                                         <p class="mt-5">Consiste en posicionar tu página en el mejor lugar dentro de la
                                             lista de resultados de la navegadores como son Google, Bing entre otros.
@@ -265,13 +265,13 @@
                 <!-- ./¿Que ofrecemos? -->
 
                 <!-- ¿Como lo logramos? -->
-                <div id="como-logramos" class="bg-light-blue-3">
-                    <div class="content-wrapper max-width">
-                        <h2 class="h2-responsive text-theme text-center content-h2 pb-5">¿Como lo logramos? </h2>
+                <div id="como-logramos" class="s-color-theme-3">
+                    <div class="o-section-content-wrapper max-width">
+                        <h2 class="h2-responsive s-text-theme text-center o-section-content__h2 pb-5">¿Como lo logramos? </h2>
 
                         <!-- Tecnologias -->
                         <article class="tecnologias">
-                            <h2 class="h2-responsive text-theme">Tecnologías</h2>
+                            <h2 class="h2-responsive s-text-theme">Tecnologías</h2>
                             <hr class="hr-card">
                             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum dignissimos
                                 recusandae voluptatum neque modi earum impedit in, nostrum harum repudiandae nihil
@@ -284,13 +284,13 @@
 
                             <div class="row  pt-5 w-100 text-center d-flex">
                                 <div class="col-md-4 mb-0 mb-sm-3">
-                                    <i class="fab fa-html5 fa-5x text-theme"></i>
+                                    <i class="fab fa-html5 fa-5x s-text-theme"></i>
                                 </div>
                                 <div class="col-md-4">
-                                    <i class="fab fab fa-css3-alt fa-5x text-theme"></i>
+                                    <i class="fab fab fa-css3-alt fa-5x s-text-theme"></i>
                                 </div>
                                 <div class="col-md-4">
-                                    <i class="fab fa-js-square fa-5x text-theme"></i>
+                                    <i class="fab fa-js-square fa-5x s-text-theme"></i>
                                 </div>
 
                             </div>
@@ -299,7 +299,7 @@
 
                         <!-- Herramientas de Diseño -->
                         <article class="herramientas-de-diseño my-5">
-                            <h2 class="h2-responsive text-theme">Herramientas de Diseño</h2>
+                            <h2 class="h2-responsive s-text-theme">Herramientas de Diseño</h2>
                             <hr class="hr-card">
                             <p class="pt-3">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum dignissimos
                                 recusandae voluptatum neque modi earum impedit in, nostrum harum repudiandae nihil
@@ -312,7 +312,7 @@
 
                             <div class="row  pt-5 w-100 text-center d-flex">
                                 <div class="col-md-12 mb-0 mb-sm-3">
-                                    <i class="fab fa-adobe fa-5x text-theme"></i>
+                                    <i class="fab fa-adobe fa-5x s-text-theme"></i>
                                 </div>
                             </div>
                         </article>
@@ -320,7 +320,7 @@
 
                         <!-- Herramientas de Desarrollo -->
                         <article class="herramientas de desarrollo my-5">
-                            <h2 class="h2-responsive text-theme">Herramientas de Desarrollo</h2>
+                            <h2 class="h2-responsive s-text-theme">Herramientas de Desarrollo</h2>
                             <hr class="hr-card">
                             <p class="pt-3">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum dignissimos
                                 recusandae voluptatum neque modi earum impedit in, nostrum harum repudiandae nihil
@@ -333,13 +333,13 @@
 
                             <div class="row  pt-5 w-100 text-center d-flex">
                                 <div class="col-md-4 mb-0 mb-sm-3">
-                                    <i class="fab fa-bootstrap fa-5x text-theme"></i>
+                                    <i class="fab fa-bootstrap fa-5x s-text-theme"></i>
                                 </div>
                                 <div class="col-md-4">
-                                    <i class="fab fab fa-mdb fa-5x text-theme"></i>
+                                    <i class="fab fab fa-mdb fa-5x s-text-theme"></i>
                                 </div>
                                 <div class="col-md-4">
-                                    <i class="fab fa-wordpress fa-5x text-theme"></i>
+                                    <i class="fab fa-wordpress fa-5x s-text-theme"></i>
                                 </div>
 
                             </div>
@@ -359,7 +359,7 @@
 
 
     <!-- Footer -->
-    <footer class="page-footer font-small pt-4 color-theme">
+    <footer class="page-footer font-small pt-4 s-color-theme">
 
         <!-- Footer Menu -->
         <div class="container-fluid text-center text-md-left">
