--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <!-- ./Date & Time section -->
 
         <!-- Menú -->
-        <nav class="navbar navbar-expand-lg navbar-dark color-theme p-0 shadow-none">
+        <nav class="navbar navbar-expand-lg navbar-dark s-color-theme p-0 shadow-none">
             <!-- Logo -->
             <div class="logo bg-logo px-5 py-3 text-center">
                 <a class="navbar-brand" href="index.html">
@@ -135,16 +135,16 @@
         <!-- Bienvenida -->
         <section class="full-screen mt-0">
             <div class="view full-screen pt-5">
-                <div class="section-img d-block w-100">
+                <div class="o-section-title__section-img d-block w-100">
                     <img src="dist/img/imagenes/c8.jpeg" class="full-screen object-fit-cover" alt="personas saludando">
                 </div>
                 <div class="mask rgba-black-light main-view d-flex align-items-center justify-content-center">
                     <div class="white-text text-center px-5">
                         <h1 class="h1-responsive text-center pt-5">Diseño y Desarrollo Web</h1>
-                        <hr class="hr-section-title">
+                        <hr class="o-hr-section-title">
                         <p class="slogan mt-5">Donde nosotros damos a conocer tu negocio en la red.</p>
                         <div class="d-flex mt-5 justify-content-center">
-                            <a data-scroll href="#index" class="btn btn-theme">Secciones</a>
+                            <a data-scroll href="#index" class="btn o-btn-theme">Secciones</a>
                             <a data-scroll href="#contacto"
                                 class="btn btn-primary ml-3 d-md-none">Contacto</a>
                         </div>
@@ -165,7 +165,7 @@
 
                     <!-- Quienes Somos -->
                     <div class="col-md-6 p-0">
-                        <div class="view">
+                        <div class="o-section-title view">
                             <img class="index__img d-block w-100 img-fluid" src="dist/img/imagenes/edificio.jpeg" alt="edificio corporativo">
                             <div class="mask flex-center rgba-indigo-light">
                                 <div class="content">
@@ -178,7 +178,7 @@
                                             delectus
                                             id
                                             iste! Porro iste necessitatibus soluta delectus ipsum!</p>
-                                        <a href="quienes-somos.html" class="btn color-theme btn-theme">Continuar</a>
+                                        <a href="quienes-somos.html" class="btn s-color-theme o-btn-theme">Continuar</a>
                                     </div>
                                 </div>
                             </div>
@@ -188,7 +188,7 @@
 
                     <!-- Servicios -->
                     <div class="col-md-6 p-0">
-                        <div class="view">
+                        <div class="o-section-title view">
                             <img class="index__img d-block w-100" src="dist/img/imagenes/welcome.jpeg" alt="Stickers con leyenda imaginar, crear, inspirar">
                             <div class="mask flex-center rgba-indigo-light">
                                 <div class="content">
@@ -201,7 +201,7 @@
                                             delectus
                                             id
                                             iste! Porro iste necessitatibus soluta delectus ipsum!</p>
-                                        <a href="servicios.html" class="btn color-theme btn-theme">Continuar</a>
+                                        <a href="servicios.html" class="btn s-color-theme o-btn-theme">Continuar</a>
                                     </div>
                                 </div>
                             </div>
@@ -217,7 +217,7 @@
 
                     <!-- Blog -->
                     <div class="col-md-7 p-0">
-                        <div class="view">
+                        <div class="o-section-title view">
                             <img class="index__img d-block w-100" src="dist/img/imagenes/blog.jpeg" alt="libreta de trabajo y computadora">
                             <div class="mask flex-center rgba-indigo-light">
                                 <div class="content">
@@ -231,7 +231,7 @@
                                             quas
                                             delectus id
                                             iste! Porro iste necessitatibus soluta delectus ipsum!</p>
-                                        <a href="blog.html" class="btn color-theme btn-theme">Continuar</a>
+                                        <a href="blog.html" class="btn s-color-theme o-btn-theme">Continuar</a>
                                     </div>
                                 </div>
                             </div>
@@ -241,7 +241,7 @@
 
                     <!-- Contacto -->
                     <div class="col-md-5 p-0 d-none d-md-block">
-                        <div class="view">
+                        <div class="o-section-title view">
                             <img class="index__img d-block w-100" src="dist/img/imagenes/contacto.jpeg" alt="personas felicitando y cerrando contrato">
                             <div class="mask flex-center rgba-indigo-light">
                                 <div class="content">
@@ -255,7 +255,7 @@
                                             quas
                                             delectus id
                                             iste! Porro iste necessitatibus soluta delectus ipsum!</p>
-                                        <a href="contacto.html" class="btn color-theme btn-theme">Continuar</a>
+                                        <a href="contacto.html" class="btn s-color-theme o-btn-theme">Continuar</a>
                                     </div>
                                 </div>
                             </div>
@@ -270,11 +270,11 @@
 
 
             <!-- Contacto -->
-            <div id="contacto" class="container-fluid bg-light-blue-5 d-md-none">
+            <div id="contacto" class="container-fluid s-color-theme-5 d-md-none">
                 <!--Section: Contact v.2-->
                 <div class="p-5 max-width m-auto">
                     <!--Section heading-->
-                    <h2 class="h1-responsive font-weight-bold text-center my-4 text-theme">Contacto</h2>
+                    <h2 class="h1-responsive font-weight-bold text-center my-4 s-text-theme">Contacto</h2>
                     <!--Section description-->
                     <p class="text-justify w-responsive mx-auto mb-5">¿Tiene usted alguna pregunta? Por favor no
                         dude en
@@ -292,7 +292,7 @@
                                     <!--Grid column-->
                                     <div class="col-md-6">
                                         <div class="form my-3">
-                                            <label for="name" class="text-theme pt-2">Nombre</label>
+                                            <label for="name" class="s-text-theme pt-2">Nombre</label>
                                             <input type="text" id="name" name="name" class="form-control">
                                         </div>
                                     </div>
@@ -300,7 +300,7 @@
                                     <!--Grid column-->
                                     <div class="col-md-6">
                                         <div class="form my-3">
-                                            <label for="email" class="text-theme pt-2">Correo
+                                            <label for="email" class="s-text-theme pt-2">Correo
                                                 Electrónico</label>
                                             <input type="text" id="email" name="email" class="form-control">
                                         </div>
@@ -312,7 +312,7 @@
                                 <div class="row">
                                     <div class="col-md-12">
                                         <div class="form my-3">
-                                            <label for="subject" class="text-theme pt-2">Asunto</label>
+                                            <label for="subject" class="s-text-theme pt-2">Asunto</label>
                                             <input type="text" id="subject" name="subject" class="form-control">
                                         </div>
                                     </div>
@@ -323,7 +323,7 @@
                                     <!--Grid column-->
                                     <div class="col-md-12">
                                         <div class="form my-3">
-                                            <label for="message" class="text-theme pt-2">Mensaje</label>
+                                            <label for="message" class="s-text-theme pt-2">Mensaje</label>
                                             <textarea type="text" id="message" name="message" rows="2"
                                                 class="form-control md-textarea"></textarea>
                                         </div>
@@ -332,7 +332,7 @@
                                 <!--Grid row-->
                             </form>
                             <div class="text-center text-md-left">
-                                <a class="btn btn-theme color-theme z-depth-5"
+                                <a class="btn o-btn-theme s-color-theme z-depth-5"
                                     onclick="document.getElementById('contact-form').submit();">enviar</a>
                             </div>
                             <div class="status"></div>
@@ -343,13 +343,13 @@
                     <!-- Contact Information-->
                     <div class="col-md-3 text-center flex-center p-5">
                         <ul class="list-unstyled mb-0">
-                            <li><i class="fas fa-map-marker-alt fa-2x text-theme"></i>
+                            <li><i class="fas fa-map-marker-alt fa-2x s-text-theme"></i>
                                 <p class="mt-2">San Francisco, CA 94126, USA</p>
                             </li>
-                            <li><i class="fas fa-phone mt-4 fa-2x text-theme"></i>
+                            <li><i class="fas fa-phone mt-4 fa-2x s-text-theme"></i>
                                 <p class="mt-2">+ 01 234 567 89</p>
                             </li>
-                            <li><i class="fas fa-envelope mt-4 fa-2x text-theme"></i>
+                            <li><i class="fas fa-envelope mt-4 fa-2x s-text-theme"></i>
                                 <p class="mt-2">contacto@lionsdevstudio.com</p>
                             </li>
                         </ul>
@@ -368,7 +368,7 @@
     <!-- Contenido -->
 
     <!-- Footer -->
-    <footer class="page-footer font-small pt-4 color-theme">
+    <footer class="page-footer font-small pt-4 s-color-theme">
 
         <!-- Footer Menú -->
         <div class="container-fluid text-center text-md-left">
